--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -66,7 +66,9 @@
     <Compile Include="Assets\Scripts\Decorators\OutOfScreenTeleportDecorator.cs" />
     <Compile Include="Assets\Scripts\Base\SpaceResistance.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Proxy\Weapon.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\Environment.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Bridge\Infantry.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\VisitorTest.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\PanelOne.cs" />
     <Compile Include="Assets\Scripts\Asteroids\ExampleServiceLocator.cs" />
     <Compile Include="Assets\Scripts\Asteroids\IInput.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="Assets\Scripts\Asteroids\Bridge\Enemy.cs" />
     <Compile Include="Assets\Scripts\Base\ObjectPool.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Memento\PointInTime.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Template Method\Site.cs" />
     <Compile Include="Assets\Scripts\Asteroids\ExampleSingleton.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Example.cs" />
     <Compile Include="Assets\Scripts\Asteroids\IMove.cs" />
@@ -86,27 +89,40 @@
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\EnemyModifier.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\RotateAFewSeconds.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\AddDefenseModifier.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Observer\ObserverTest.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\ApplayDamage.cs" />
     <Compile Include="Assets\Scripts\Asteroids\IService.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\ModificationMuffler.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\ChainOfResponsibilityTest.cs" />
     <Compile Include="Assets\Scripts\Asteroids\ServiceLocator.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Adapter\Enemy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Iterator\Example.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\IDealingDamage.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\Weapon.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Observer\Enemy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Adapter\IAttack.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Template Method\Start.cs" />
     <Compile Include="Assets\Scripts\Asteroids\TestSingletonMonoBehaviour.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Flyweight\LevelCompleted.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Observer\ListenerHitShowDamage.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\Knight.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Template Method\VK.cs" />
     <Compile Include="Assets\Scripts\Base\OutOfScreenTrigger.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Facade\Example.cs" />
     <Compile Include="Assets\Scripts\Base\PooledObject.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\IFire.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Observer\IHit.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\Muffler.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Ship.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Facade\GameService.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\IGameHandler.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Composite\IAttack.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\Hit.cs" />
     <Compile Include="Assets\Scripts\Asteroids\IPlatform.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Strategy\StrategyTest.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\State\State.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\GameHandler.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\ConsoleDisplay.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\MoveLeft.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Composite\Example.cs" />
     <Compile Include="Assets\Scripts\Asteroids\ConsoleWindow.cs" />
@@ -116,11 +132,14 @@
     <Compile Include="Assets\Scripts\Asteroids\Proxy\WeaponProxy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\BuilderExtensions.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\PanelTwo.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Strategy\BaseBehaviour.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Facade\Map.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Composite\Unit.cs" />
     <Compile Include="Assets\Scripts\Ship\ShipKeyboardController.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\NullObject\NullObjectTest.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Enemy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Asteroid.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\InfoCollision.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\Enemy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Bridge\IAttack.cs" />
     <Compile Include="Assets\Scripts\Asteroids\NameManager.cs" />
@@ -130,11 +149,14 @@
     <Compile Include="Assets\Scripts\Asteroids\Iterator\Enemy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\ICommand.cs" />
     <Compile Include="Assets\Scripts\Bullet\Bullet.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\State\Context.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Visitor\Enemy.cs" />
     <Compile Include="Assets\Scripts\Base\GameCore.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\IAmmunition.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\Bullet.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Service.cs" />
     <Compile Include="Assets\Scripts\Asteroids\MoveTransform.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\State\StateTest.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\MoveReverse.cs" />
     <Compile Include="Assets\Scripts\Base\RotateController.cs" />
     <Compile Include="Assets\Scripts\Asteroids\PlayerData.cs" />
@@ -154,6 +176,7 @@
     <Compile Include="Assets\Scripts\Asteroids\PCWindow.cs" />
     <Compile Include="Assets\Scripts\Asteroids\GameObjectVisualBuilder.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Bridge\IMove.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\State\ConcreteStateB.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\IMuffler.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Hp.cs" />
     <Compile Include="Assets\Scripts\Asteroids\IEnemyFactory.cs" />
@@ -163,6 +186,7 @@
     <Compile Include="Assets\Scripts\Ship\ShipTriggerDestroyer.cs" />
     <Compile Include="Assets\Scripts\Asteroids\ServiceLocatorMonoBehaviour.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Proxy\IWeapon.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Strategy\MoveBehaviour.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Memento\TimeBody.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Facade\Player.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\MoveRight.cs" />
@@ -171,8 +195,10 @@
     <Compile Include="Assets\Scripts\Asteroids\Bridge\MagicalAttack.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Decorator\Example.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Player.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Strategy\RotateBehaviour.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Composite\Detachment.cs" />
     <Compile Include="Assets\Scripts\Base\EngineController.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\State\ConcreteStateA.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Iterator\IEnemy.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\InputHandler.cs" />
     <Compile Include="Assets\Scripts\Asteroids\IRotation.cs" />
@@ -183,32 +209,17 @@
     <Compile Include="Assets\Scripts\Asteroids\Chain of Responsibility\MoveToPosition.cs" />
     <Compile Include="Assets\Scripts\Asteroids\Command\BaseUi.cs" />
     <Compile Include="Assets\Scripts\Asteroids\EnemyPool.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\NullObject\NullObjectTest.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Observer\IHit.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Observer\Enemy.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Observer\ListenerHitShowDamage.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Observer\ObserverTest.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\State\State.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\State\ConcreteStateA.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\State\ConcreteStateB.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\State\Context.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\State\StateTest.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Strategy\BaseBehaviour.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Strategy\MoveBehaviour.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Strategy\RotateBehaviour.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Strategy\StrategyTest.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Template Method\Site.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Template Method\VK.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Template Method\Start.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\Hit.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\Enemy.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\Environment.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\Knight.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\InfoCollision.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\IDealingDamage.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\ConsoleDisplay.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\ApplayDamage.cs" />
-    <Compile Include="Assets\Scripts\Asteroids\Visitor\VisitorTest.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Repository\IData.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\Repository\JsonData.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\TryParse\Example.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\SwitchPattern\SwitchPattern.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\IHpModel.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\HpModel.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\IHpViewModel.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\HpViewModel.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\HpView.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\ApplyDamageView.cs" />
+    <Compile Include="Assets\Scripts\Asteroids\MVVM\Starter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
